# comp371_a3

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
shaders/: depthFragment.shader  depthVertex.shader  fragment.shader  shadowFragment.shader  shadowVertex.shader  vertex.shader
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  OBJloader.h  Shader.cpp  Shader.h  main.cpp  shaderloader.h
